# dsc180ProjectB

./: .gitignore  README.md  Untitled.ipynb  dagmanl_01.jsonl  dagmats01.jsonl  golemEV01.jsonl  golemEV02.jsonl  golemEV03.jsonl  golem_tuning.ipynb  grid_search.py  gsa.ipynb  ht_dagmats.ipynb  hyperparameter_tuning.ipynb  index.md  main.py  output.json  pyproject.toml  requirements.txt  run.py  testing.ipynb  testing.py  testing01.ipynb  testing01.jsonl  testing02.jsonl  testing04.jsonl  testing05.jsonl  testing06.ipynb  testing06.jsonl  testing08.jsonl  testing2.ipynb  testing3.ipynb  testing4.ipynb  testing4.py  testing5.ipynb  testing_dagmanl.py  testing_dagmats.py  testing_one.py  testing_two.py
DYNOTEARS/: dynotears.py  generate_data.py  run_dynotears.py  structuremodel.py  testing.ipynb
Docker/: .requirements.txt.swp  Dockerfile  requirements.txt
GOLEMTS/: .model.py.swp  generate_data.py  model.py  testing.ipynb  trainer.py  trainer_cpu.py
GOLEMTS2/: model.py
analysis_notebooks/: golem_tuning.ipynb  gsa.ipynb  ht_dagmats.ipynb  snp100.ipynb  testing.ipynb  testing3.ipynb  testing4.ipynb  testing_DYNOTEARS.ipynb  testing_GOLEMTS.ipynb
dagma/: dagmats.py  dagmats_cpu.py  nonlinear_dagma.py  nonlinear_dagma_cpu.py  testing.ipynb
dagma_nl/: generate_data.py  nonlinear_dagma.py  testing.ipynb
docs/: _config.yaml  index.md
examples/: full_results.csv  golemNV01.jsonl  hyperparameter_tuning.ipynb  test.jsonl  testing04.jsonl  testing06.jsonl  testing07.jsonl  testing5.ipynb
notears_nl/: generate_data.py  nonlinear.py  testing.ipynb
report/: graphs.py  (+6 more)
(+30 files in other folders)
