[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Causal_Discovery_TS"
version = "0.0.1"
authors = [
  { name="Tyler Gibbs", email="tylerdavidgibbs@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/"
Issues = "https://github.com/"
